# task-cli

./: .gitignore  LICENSE  README.md  README_ZH.md  main.py  pyproject.toml  requirements.txt  setup.py  task_cli_main.py
commands/: decompose.py  gantt.py  howto.py  init.py  list.py  qa.py  report.py  update.py
docs/: README_EN.md  design.md  prompt.md
task_cli_tool/: task_cli_main.py
task_cli_tool/commands/: decompose.py  gantt.py  help.py  howto.py  init.py  list.py  qa.py  report.py  update.py
task_cli_tool/utils/: call_llm.py  llm_api.py  storage.py
templates/: gantt_template.html
tests/: test_llm_api.py  test_storage.py
utils/: call_llm.py  display.py  llm_api.py  storage.py
